demo/konvoy/demo-virtual-event/traefik-v1/webapp/02-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webapp
  namespace: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: dduportal/webapp:traefik
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 1
            memory: 1G
          requests:
            cpu: 1
            memory: 1G
